tests/expectations/parser-expression/expression/array_inline.out
{
  "Array": {
    "elements": [],
    "span": {
      "lo": 0,
      "hi": 2
    },
    "id": 0
  }
}

{
  "Array": {
    "elements": [],
    "span": {
      "lo": 3,
      "hi": 6
    },
    "id": 0
  }
}

Error [EPAR0370005]: expected ']' -- found ','
    --> test_2:1:3
     |
   1 | [,,]
     |   ^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', ']', 'true', 'false', 'async', 'block', 'network', 'self' -- found ','
    --> test_3:1:4
     |
   1 | [0,,]
     |    ^
Error [EPAR0370005]: expected ']' -- found '0'
    --> test_4:1:3
     |
   1 | [,0]
     |   ^
Error [EPAR0370005]: expected ']' -- found '0'
    --> test_5:1:3
     |
   1 | [,0,]
     |   ^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', ']', ',', 'true', 'false', 'async', 'block', 'network', 'self' -- found ';'
    --> test_6:1:2
     |
   1 | [;]
     |  ^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', ']', ',', 'true', 'false', 'async', 'block', 'network', 'self' -- found ';'
    --> test_7:1:2
     |
   1 | [;;]
     |  ^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found ';'
    --> test_8:1:4
     |
   1 | [0;;]
     |    ^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', ']', ',', 'true', 'false', 'async', 'block', 'network', 'self' -- found ';'
    --> test_9:1:2
     |
   1 | [;0]
     |  ^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', ']', ',', 'true', 'false', 'async', 'block', 'network', 'self' -- found ';'
    --> test_10:1:2
     |
   1 | [;0;]
     |  ^
